cli/tests/snapshot/inputs/errors/destructuring_type_mismatch_fail.ncl
# capture = 'stderr'
# command = []
(let { a : Number } = { a = "hi" } in
a) : _
